; ModuleID = '/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitLir.c_sljit_get_local_base.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/pcre/pcre2lib/sljit/extr_sljitLir.c_sljit_get_local_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sljit_compiler = type { i32 }

@SLJIT_SP = common dso_local global i32 0, align 4
@SLJIT_ADD = common dso_local global i32 0, align 4
@SLJIT_IMM = common dso_local global i32 0, align 4
@SLJIT_MOV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sljit_get_local_base(%struct.sljit_compiler* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.sljit_compiler*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store %struct.sljit_compiler* %0, %struct.sljit_compiler** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %10 = call i32 (...) @CHECK_ERROR()
  %11 = load %struct.sljit_compiler*, %struct.sljit_compiler** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i64, i64* %8, align 8
  %14 = load i64, i64* %9, align 8
  %15 = call i32 @check_sljit_get_local_base(%struct.sljit_compiler* %11, i32 %12, i64 %13, i64 %14)
  %16 = call i32 @CHECK(i32 %15)
  %17 = load i32, i32* @SLJIT_SP, align 4
  %18 = call i32 @SLJIT_MEM1(i32 %17)
  %19 = load i64, i64* %9, align 8
  %20 = call i32 @ADJUST_LOCAL_OFFSET(i32 %18, i64 %19)
  %21 = load i64, i64* %9, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %4
  %24 = load %struct.sljit_compiler*, %struct.sljit_compiler** %6, align 8
  %25 = load i32, i32* @SLJIT_ADD, align 4
  %26 = load i32, i32* %7, align 4
  %27 = load i64, i64* %8, align 8
  %28 = load i32, i32* @SLJIT_SP, align 4
  %29 = load i32, i32* @SLJIT_IMM, align 4
  %30 = load i64, i64* %9, align 8
  %31 = call i32 @sljit_emit_op2(%struct.sljit_compiler* %24, i32 %25, i32 %26, i64 %27, i32 %28, i32 0, i32 %29, i64 %30)
  store i32 %31, i32* %5, align 4
  br label %39

32:                                               ; preds = %4
  %33 = load %struct.sljit_compiler*, %struct.sljit_compiler** %6, align 8
  %34 = load i32, i32* @SLJIT_MOV, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i64, i64* %8, align 8
  %37 = load i32, i32* @SLJIT_SP, align 4
  %38 = call i32 @sljit_emit_op1(%struct.sljit_compiler* %33, i32 %34, i32 %35, i64 %36, i32 %37, i32 0)
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %32, %23
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i32 @CHECK_ERROR(...) #1

declare dso_local i32 @CHECK(i32) #1

declare dso_local i32 @check_sljit_get_local_base(%struct.sljit_compiler*, i32, i64, i64) #1

declare dso_local i32 @ADJUST_LOCAL_OFFSET(i32, i64) #1

declare dso_local i32 @SLJIT_MEM1(i32) #1

declare dso_local i32 @sljit_emit_op2(%struct.sljit_compiler*, i32, i32, i64, i32, i32, i32, i64) #1

declare dso_local i32 @sljit_emit_op1(%struct.sljit_compiler*, i32, i32, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
